<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/fooolen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/login_screen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/register_title_ressource"
        android:textColor="@color/maroon"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/pseudo_id"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/pseudo_input_ressource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_text" />

    <EditText
        android:id="@+id/password_id"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_input_ressource"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/pseudo_id"
        app:layout_constraintStart_toStartOf="@+id/pseudo_id"
        app:layout_constraintTop_toBottomOf="@+id/pseudo_id" />
    <Button
        android:id="@+id/login_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_validation_text_ressource"
        app:backgroundTint="@color/green"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/password_id"
        app:layout_constraintTop_toBottomOf="@+id/password_id" />


</androidx.constraintlayout.widget.ConstraintLayout>