<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity3"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="sigup back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:transitionName="transition_back_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/maroon"
            android:textStyle="bold"
            android:transitionName="transition_signup_title"
            android:fontFamily="@font/verdana"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/black_border"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:hint="@string/phone_input_ressource"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:fontFamily="@font/verdana"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_99"
            android:text="@string/next"
            android:onClick="goNextSignupScreen"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"
            android:layout_gravity="center"
            android:fontFamily="@font/verdana"/>

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn"
            android:fontFamily="@font/verdana"/>
    </LinearLayout>

</ScrollView>