<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity2"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="sigup back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:transitionName="transition_back_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/maroon"
            android:transitionName="transition_signup_title"
            android:fontFamily="@font/verdana"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexe"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/verdana"/>

            <RadioGroup
                android:id="@+id/sex_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_sex_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Homme"
                    android:fontFamily="@font/verdana"/>

                <RadioButton
                    android:id="@+id/female_sex_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femme"
                    android:fontFamily="@font/verdana"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/verdana"/>

            <DatePicker
                android:id="@+id/signup_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_99"
            android:elevation="5dp"
            android:onClick="goNextSignupScreen"
            android:text="@string/next"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn"
            android:layout_gravity="center"
            android:fontFamily="@font/verdana"/>

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/login"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"
            android:layout_gravity="center"
            android:fontFamily="@font/verdana"/>
    </LinearLayout>

</ScrollView>